Estructura componente principal
Creación de la estructura header y main en el app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<button class="btn btn-danger">Prueba</button>
-<router-outlet></router-outlet>
+<header class="mx-5">
+  <app-menu></app-menu>
+</header>
+<main class="mx-5">
+  <router-outlet></router-outlet>
+</main>
