--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,1 +1,17 @@
-<p>menu works!</p>
+<nav class="navbar navbar-expand-lg  border-bottom border-black">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtwGc0zro8BopnK1wMzv4Jq8Q5RozBP0UBK3gtHYmUeXfLmzVIBITyeJpvf_hkO0hYQW0&usqp=CAU" width="auto" height="40">
+        </a>
+        <div class="text-end" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" [routerLink]="['/']">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/newuser']">Nuevo Usuario</a>
+            </li>
+            </ul>
+        </div>
+    </div>
+  </nav>
