--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,10 +6,10 @@
         <div class="text-end" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" [routerLink]="['/']">Home</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" >Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/newuser']">Nuevo Usuario</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']" >Nuevo Usuario</a>
             </li>
             </ul>
         </div>
