--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<section class="container-fluid mt-5 mb-5 ms-0 ps-0 pe-0">
+    <div class="row g-5 m-0">
+        <article class="col-12 col-md-6 col-lg-6 col-xl-4 col-xxl-3 m-0 pb-5 " *ngFor="let user of arrUsers">
+            <app-user-card [miUser] = "user"></app-user-card>
+        </article>
+    </div>
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center pt-5">
+          <li class="page-item ">
+            <a class="page-link text-primary-emphasis" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link text-primary-emphasis" href="#">1</a></li>
+          <li class="page-item"><a class="page-link text-primary-emphasis" href="#">2</a></li>
+          <li class="page-item">
+            <a class="page-link text-primary-emphasis" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+</section>
