Creación del componente user-view
Se maqueta el html, se le añade estilo con css y funcionalidad con el ts

--- a/src/app/pages/user-view/user-view.component.html
+++ b/src/app/pages/user-view/user-view.component.html
@@ -1,1 +1,21 @@
-<p>user-view works!</p>
+<section class="container  p-0 mx-auto">
+    <div class="row pt-5">
+        <div class="col border-end border-black text-center">
+            <img class="pt-5 pb-5" width="70%" src="{{oneUser?.image}}" alt="">
+        </div>
+        <div class="col ps-5 pt-5 pb-5">
+            <h3 class="pt-5 mb-0">{{oneUser?.first_name}}</h3>
+            <h3 class="pt-3 mb-0">{{oneUser?.last_name}}</h3>
+            <p class="pt-5 fw-bold m-0 pb-3">Nombre de usuario: <span class="fw-normal">{{oneUser?.username}}</span></p>
+            <p class="fw-bold m-0 pb-5">Email: <span class="fw-normal">{{oneUser?.email}}</span></p>
+            
+            <div class="btn-group pt-5 pb-5" role="group" aria-label="Basic outlined example">
+                <a class="btn btn-outline-dark w-auto px-4" (click)="deleteUser(oneUser?._id)">Eliminar</a>
+                <a class="btn btn-outline-dark px-4 ">Actualizar</a>
+                <a class="btn btn-outline-dark" [routerLink]="['/home']">Volver a listado</a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
