--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-expand-lg  border-bottom border-black">
+<nav class="navbar navbar-expand-lg  border-bottom border-black shadow-sm">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtwGc0zro8BopnK1wMzv4Jq8Q5RozBP0UBK3gtHYmUeXfLmzVIBITyeJpvf_hkO0hYQW0&usqp=CAU" width="auto" height="40">
+        <a class="navbar-brand ms-5" >
+            <img [routerLink]="['/home']" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtwGc0zro8BopnK1wMzv4Jq8Q5RozBP0UBK3gtHYmUeXfLmzVIBITyeJpvf_hkO0hYQW0&usqp=CAU" width="auto" height="40">
+            <h2 [routerLink]="['/home']">SurfZONE</h2>  
         </a>
-        <div class="text-end" id="navbarNav">
+        
+        <div class="text-end me-5" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" >Home</a>
