Se añaden tipografías
Se añaden los enlaces de las tipografías deseadas para su uso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<header class="mx-5">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Dosis&family=Tulpen+One&display=swap" rel="stylesheet">
+
+
+<header>
   <app-menu></app-menu>
 </header>
 <main class="mx-5">
